projects/Fusion Substrate/policy_error.txt
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Checking fusion-policy v1.0.0 (C:\Projects\Fusion - Programming Language\antigravity\playground\Fusion Substrate\crates\fusion-policy)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde_json`
  --> crates\fusion-policy\src\lib.rs:62:19
   |
62 |     pub metadata: serde_json::Value,
   |                   ^^^^^^^^^^ use of unresolved module or unlinked crate `serde_json`
   |
   = help: if you wanted to use a crate named `serde_json`, use `cargo add serde_json` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `fusion-policy` (lib) due to 1 previous error
